crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__gather__empty-nested-gather-falls-out.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/gather/empty-nested-gather-falls-out
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0] === PASS
> "" [Choices: "q7" (0) -> 0]
> "" [Choices: "a6med" (0) -> 0]
> "outer gather\n" [Ended]
outcome: Ended
